5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1795_3134.log
== SUBMITION (2019-05-30 16:13:33) 
-- CODE:
from numpy import*

u=float(input("vetor(n): "))
N = u - 1
u1 = [0]
u2 = [1]
u3 = [2]
u4 = [N]
n=

M = ((u1**2) + (u2**2) + (u3**2) + (u4**2))/


-- EXECUTION TIME:
0.197281
-- ERROR:
  File "/home/codebench/codes/1795/3134/main.py", line 9
    n=
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:31:51) 
-- CODE:
from numpy import*

u=float(input("vetor(n): "))
N = u - 1
u1 = [0]
u2 = [1]
u3 = [2]
u4 = [N]
n=

M = ((u1**2) + (u2**2) + (u3**2) + (u4**2))/


-- EXECUTION TIME:
0.119926
-- ERROR:
  File "/home/codebench/codes/1795/3134/main.py", line 9
    n=
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:34:22) 
-- CODE:
from numpy import*

u=float(input("vetor(n): "))
N = u - 1
u1 = [0]
u2 = [1]
u3 = [2]
u4 = [N]
n=

M = ((u1**2) + (u2**2) + (u3**2) + (u4**2))/


-- EXECUTION TIME:
0.190956
-- ERROR:
  File "/home/codebench/codes/1795/3134/main.py", line 9
    n=
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
